Ensure display item ids are unique for image areas

When painting the focus ring for an image map's area, we would use the
same display item id (layout object + phase) for both the image's
outline and the focus ring. This patch creates a separate display item
type for image area focus rings.

BUG=606113

Review URL: https://codereview.chromium.org/1910233005

Cr-Commit-Position: refs/heads/master@{#389392}

Former-commit-id: e2ef23f23e20d28e9e611961c27fbaa0d49333a8