third_party/WebKit/Source/platform/graphics/paint/DisplayItem.cpp
@@ -77,6 +77,7 @@ static WTF::String specialDrawingTypeAsDebugString(DisplayItem::Type type)
         DEBUG_STRING_CASE(DragImage);
         DEBUG_STRING_CASE(SVGImage);
         DEBUG_STRING_CASE(LinkHighlight);
+        DEBUG_STRING_CASE(ImageAreaFocusRing);
         DEBUG_STRING_CASE(PageOverlay);
         DEBUG_STRING_CASE(PageWidgetDelegateBackgroundFallback);
         DEBUG_STRING_CASE(PopupContainerBorder);
